--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
 
 <script>
 let cards = JSON.parse(localStorage.getItem("cards") || "[]");
+// If no cards exist in localStorage, auto-load kanken10.json
+if (!localStorage.getItem("cards")) {
+  fetch("kanken10.json")
+    .then(res => res.json())
+    .then(data => {
+      cards = data;
+      save();
+      renderList();
+    })
+    .catch(err => console.error("Error loading default deck:", err));
+}
 let queue = [];
 let current = null;
 let currentSide = "front";
@@ -188,3 +199,4 @@ document.getElementById("answerInput").addEventListener("keydown", (ev) => {
 </script>
 </body>
 </html>
+
